
November 9, 2009 - chris
o ham_get_flags is now deprecated - it was replaced by ham_get_parameters
    and ham_env_get_parameters

Jul 31, 2009 - chris 
o performance improvements in the freelist code, freelist was abstracted
    to allow multiple implementations (all from Ger Hobbelt, 
    http://www.hobbelt.com, http://www.hebbut.net)
o added "Data Access Mode" to give hints how Databases/Environments are used;
    hamsterdb can then optimize its internal algorithms/file formats
    (all from Ger Hobbelt, http://www.hobbelt.com, http://www.hebbut.net)
o the unittest framework "bfc" was improved significantly, improved
    signal catching (all from Ger Hobbelt, http://www.hobbelt.com, 
    http://www.hebbut.net)

Jul 26, 2009 - chris 
o the unittest framework "bfc" was improved significantly, allowing new
    command line options and catching HW and win32-exceptions (all from
    Ger Hobbelt, http://www.hobbelt.com, http://www.hebbut.net)

Jul 25, 2009 - chris 
o bugfix: when an Environment is created (or opened), the header page was
    not immediately written (or read); therefore settings were lost, unless
    a database was created (or opened) - Thanks, Ger Hobbelt

Jul 20, 2009 - chris 
o added ham_env_get_parameters, ham_db_get_parameters and
    functions for approximate matching (all from Ger Hobbelt, 
    http://www.hobbelt.com, http://www.hebbut.net)

Jul 19, 2009 - chris 
o added various new asserts, code cleanups, win32 improvements/security
    improvements and new tests (all from Ger Hobbelt, http://www.hobbelt.com,
    http://www.hebbut.net)

Mar 05, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.0.9

May 13, 2009 - chris 
o removed the dependency to cppunit (replaced it with my own tiny acceptance
    test framework)

May 12, 2009 - chris 
o fixed segmentation fault when using a Cursor to iterate over all keys
    and the record parameter is NULL and compression is enabled, then